@@ -4,6 +4,7 @@
 * Litle: Add support for passing optional fields in token based transactions [forest]
 * Add Finansbank gateway [scamurcuoglu]
 * Paymill: Use .com instead of .de for save card url [besi]
+* Worldpay integration: Use more robust endpoint urls [nashbridges]
 
 == Version 1.31.1 (February 25, 2013)
 
